# final_project_CVD

./: .gitignore  README.md  extract_frames.py  pyproject.toml  repair_one_object_csv.py
experiments/: one_object_comparison.py  two_objects_comparison_analytical_pruny.py
notebooks/: analysis_one_object.ipynb  comparison_3d_Fourier_and_phase_based_estimation.ipynb  comparison_prony_and_analytical.ipynb  scratch.ipynb
results/one_object/: one_object_disk.csv  one_object_gaussian.csv  one_object_square.csv
slurm/: check_csv_length.sbatch  check_mounts.sbatch  check_uv.sbatch  debug_gpu.sbatch  debug_one_object.sbatch  one_object_array_shape.sbatch  one_object_array_shape_gpu.sbatch  one_object_resume.sbatch  run_two_objects_phase.sbatch  test_local_scratch_write.sbatch
src/: flux_integrate.py  io.py  plotting.py  synthetic.py
src/phase_model/: detection.py  segmenter.py  viz.py
src/plane_scoring_detection/: __init__.py  cfar.py  detection.py  energy.py  fft.py
tests/: conftest.py  test_cfar.py  test_detection.py  test_energy.py  test_fft.py  test_integration_synthetic.py  test_phase_detection.py  test_phase_segmenter.py
